--- a/.github/workflows/carapace-bin.yml
+++ b/.github/workflows/carapace-bin.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           repository: carapace-sh/carapace-bin
 
+      - name: fix git safe.directory
+        run:  git config --global --add safe.directory '*'
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
