--- a/.github/workflows/carapace-bin.yml
+++ b/.github/workflows/carapace-bin.yml
@@ -29,6 +29,6 @@ jobs:
         run: apt-get update && apt-get install -y gh
 
       - name: upload archives
-        run: gh release create --repo carapace-sh/carapace-nightly --title "$(date +%Y-%m-%d)" ./dist/*.zip ./dist/*.tar.gz ./dist/checksums.txt
+        run: gh release create --repo carapace-sh/carapace-nightly "$(date +%Y-%m-%d)" ./dist/*.zip ./dist/*.tar.gz ./dist/checksums.txt
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
